--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -341,7 +341,7 @@
             <property name="checked">
              <bool>false</bool>
             </property>
-            <property name="collapsed">
+            <property name="collapsed" stdset="0">
              <bool>true</bool>
             </property>
             <layout class="QGridLayout" name="layoutMetadataFilters" columnstretch="0,1,0">
@@ -601,7 +601,7 @@
               <property name="toolTip">
                <string>Any (multi-)polygon(s)</string>
               </property>
-              <property name="showCrs">
+              <property name="showCrs" stdset="0">
                <bool>true</bool>
               </property>
              </widget>
@@ -628,97 +628,145 @@
        <string>Settings</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="0">
-        <layout class="QFormLayout" name="layoutOutputDirectory">
-         <item row="0" column="0">
-          <widget class="QLabel" name="labelOutputDirectory">
-           <property name="text">
-            <string>Output directory:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <layout class="QHBoxLayout" name="layoutOutputDirectoryInput">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLineEdit" name="outputDirectory"/>
-           </item>
-           <item>
-            <widget class="QPushButton" name="selectOutputDirectory">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>29</width>
-               <height>29</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>29</width>
-               <height>29</height>
-              </size>
-             </property>
-             <property name="text">
-              <string notr="true">...</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
+       <item row="1" column="1">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="logoutButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>89</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>89</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Log out</string>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <layout class="QGridLayout" name="gridLayout_4">
-         <item row="1" column="1">
-          <widget class="QPushButton" name="logoutButton">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>89</width>
-             <height>25</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>89</width>
-             <height>25</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Log out</string>
-           </property>
-          </widget>
+         <item row="3" column="0">
+          <layout class="QFormLayout" name="layoutOutputDirectory">
+           <item row="0" column="0">
+            <widget class="QLabel" name="labelOutputDirectory">
+             <property name="text">
+              <string>Output directory:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <layout class="QHBoxLayout" name="layoutOutputDirectoryInput">
+             <property name="spacing">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLineEdit" name="outputDirectory"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="selectOutputDirectory">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>29</width>
+                 <height>29</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>29</width>
+                 <height>29</height>
+                </size>
+               </property>
+               <property name="text">
+                <string notr="true">...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </item>
-         <item row="1" column="0">
-          <spacer name="horizontalSpacer_4">
+         <item row="2" column="0">
+          <spacer name="verticalSpacer_4">
            <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Expanding</enum>
+            <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>300</width>
-             <height>20</height>
+             <width>20</width>
+             <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
-         <item row="0" column="1">
-          <spacer name="verticalSpacer_3">
+         <item row="1" column="0">
+          <widget class="QLabel" name="widget_profile">
+           <property name="text">
+            <string>&lt;html&gt;
+ &lt;head&gt;
+    &lt;style&gt;
+    th, td {
+        padding: 10px;
+        border: 1px solid #8f8f8f;
+      }
+    &lt;/style&gt;
+
+ &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h3
+      style=&quot;
+        margin-top: 30px;
+        margin-bottom: 20px;
+        margin-left: 30px;
+        margin-right: 30px;
+        -qt-block-indent: 0;
+        text-indent: 0px;
+      &quot;
+    &gt;
+     &lt;a href=&quot;https://app.mapflow.ai/account/balance&quot;&gt;Top up credits&lt;/a&gt;
+   &lt;/h3&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignHCenter|Qt::AlignTop</set>
+           </property>
+           <property name="openExternalLinks">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <spacer name="verticalSpacer_5">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
@@ -751,7 +799,118 @@
        <item>
         <widget class="QLabel" name="help">
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h3 style=&quot; margin-top:30px; margin-bottom:20px; margin-left:30px; margin-right:30px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:600;&quot;&gt;Mapflow&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;User Interface walkthrough&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/userguides/prices.html#mapflow-qgis-pricing-model&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Pricing&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#how-to-upload-your-image&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to process your own image&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to use a different imagery tileset&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect to Maxar SecureWatch&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;h3 style=&quot; margin-top:30px; margin-bottom:20px; margin-left:30px; margin-right:30px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:600;&quot;&gt;Mapflow Agro&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://agro.geoalert.io/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;About&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#sentinel-2&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Sentinel imagery&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/userguides/iterative_mapping.html&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Iterative mapping workflow for cropland maps&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;If you have a feature request or have spotted a bug,&lt;br/&gt;create an issue on our &lt;/span&gt;&lt;a href=&quot;https://github.com/Geoalert/mapflow-qgis&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline; color:#0000ff;&quot;&gt;GitHub&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;
+ &lt;head&gt;
+    &lt;style&gt;
+    th, td {
+        padding: 10px;
+        border: 1px solid #8f8f8f;
+      }
+    &lt;/style&gt;
+
+ &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h3
+      style=&quot;
+        margin-top: 30px;
+        margin-bottom: 20px;
+        margin-left: 30px;
+        margin-right: 30px;
+        -qt-block-indent: 0;
+        text-indent: 0px;
+      &quot;
+    &gt;
+      &lt;span style=&quot;font-size: large; font-weight: 600&quot;&gt;Mapflow&lt;/span&gt;
+    &lt;/h3&gt;
+    &lt;p align=&quot;center&quot;&gt;
+      &lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;
+        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
+          &gt;User Interface walkthrough&lt;/span
+        &gt;&lt;/a
+      &gt;
+    &lt;/p&gt;
+    &lt;p align=&quot;center&quot;&gt;
+      &lt;a
+        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#how-to-upload-your-image&quot;
+        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
+          &gt;How to process your own image&lt;/span
+        &gt;&lt;/a
+      &gt;
+    &lt;/p&gt;
+    &lt;p align=&quot;center&quot;&gt;
+      &lt;a
+        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;
+        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
+          &gt;How to use a different imagery tileset (XYZ or TMS)&lt;/span
+        &gt;&lt;/a
+      &gt;
+    &lt;/p&gt;
+    &lt;p align=&quot;center&quot;&gt;
+      &lt;a
+        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;
+        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
+          &gt;How to connect to Maxar SecureWatch&lt;/span
+        &gt;&lt;/a
+      &gt;
+    &lt;/p&gt;
+    &lt;br&gt;
+    &lt;h3&gt;
+      &lt;span style=&quot;font-size: large; font-weight: 600;&quot;&gt;Mapflow Pricing&lt;/span&gt;
+    &lt;/h3&gt;
+
+    &lt;p align=&quot;center&quot;&gt;
+        &lt;table&gt;
+        &lt;colgroup&gt;
+        &lt;col style=&quot;width: 51%;&quot;&gt;
+        &lt;col style=&quot;width: 16%;&quot;&gt;
+        &lt;col style=&quot;width: 16%;&quot;&gt;
+        &lt;col style=&quot;width: 16%;&quot;&gt;
+        &lt;/colgroup&gt;
+        &lt;thead&gt;
+        &lt;tr class=&quot;row-odd&quot;&gt;&lt;th class=&quot;head&quot;&gt;&lt;p&gt;Tariff&lt;/p&gt;&lt;/th&gt;
+        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$50&lt;/p&gt;&lt;/th&gt;
+        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$90&lt;/p&gt;&lt;/th&gt;
+        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$800&lt;/p&gt;&lt;/th&gt;
+        &lt;/tr&gt;
+        &lt;/thead&gt;
+        &lt;tbody&gt;
+        &lt;tr class=&quot;row-even&quot;&gt;&lt;td&gt;&lt;p&gt;Default or user custom imagery, km²&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;50&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;100&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;1000&lt;/p&gt;&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr class=&quot;row-odd&quot;&gt;&lt;td&gt;&lt;p&gt;Premium satellite imagery, km²&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;10&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;20&lt;/p&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;p&gt;200&lt;/p&gt;&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;/tbody&gt;
+        &lt;/table&gt;
+    &lt;/p&gt;
+
+
+    &lt;div&gt;
+        &lt;p&gt;See also – &lt;a class=&quot;reference internal&quot; href=&quot;https://docs.mapflow.ai/faq.html&quot;&gt;&lt;span class=&quot;doc&quot;&gt;*How to buy credits for using the platform? How much is it?*&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;br&gt;
+
+    &lt;h3&gt;
+        &lt;span style=&quot;font-size: large; font-weight: 600;&quot;&gt;Join the project on Github&lt;/span&gt;
+    &lt;/h3&gt;
+    &lt;p&gt;
+      &lt;span style=&quot;font-weight: 600&quot;
+        &gt;If you have a feature request or spotted a bug,&lt;br /&gt;create an
+        issue on &lt;/span
+      &gt;&lt;a href=&quot;https://github.com/Geoalert/mapflow-qgis&quot;
+        &gt;&lt;span
+          style=&quot;font-weight: 600; text-decoration: underline; color: #0000ff&quot;
+          &gt;GitHub&lt;/span
+        &gt;&lt;/a
+      &gt;
+    &lt;/p&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -791,7 +950,7 @@
         <x>4</x>
         <y>0</y>
         <width>344</width>
-        <height>431</height>
+        <height>433</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -823,7 +982,7 @@
               <x>4</x>
               <y>6</y>
               <width>330</width>
-              <height>245</height>
+              <height>273</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -874,10 +1033,10 @@
                        <property name="maxVisibleItems">
                         <number>30</number>
                        </property>
-                       <property name="allowEmptyLayer">
+                       <property name="allowEmptyLayer" stdset="0">
                         <bool>false</bool>
                        </property>
-                       <property name="showCrs">
+                       <property name="showCrs" stdset="0">
                         <bool>true</bool>
                        </property>
                       </widget>
@@ -1028,10 +1187,10 @@
                   <layout class="QHBoxLayout" name="horizontalLayout_5">
                    <item>
                     <widget class="QgsMapLayerComboBox" name="rasterCombo">
-                     <property name="showCrs">
+                     <property name="showCrs" stdset="0">
                       <bool>true</bool>
                      </property>
-                     <property name="excludedProviders">
+                     <property name="excludedProviders" stdset="0">
                       <stringlist notr="true">
                        <string>wms</string>
                        <string>postgresraster</string>
@@ -1286,7 +1445,7 @@
       <property name="flat">
        <bool>true</bool>
       </property>
-      <property name="collapsed">
+      <property name="collapsed" stdset="0">
        <bool>true</bool>
       </property>
       <widget class="QPushButton" name="ratingSubmitButton">
@@ -1311,7 +1470,7 @@
          <x>5</x>
          <y>30</y>
          <width>331</width>
-         <height>138</height>
+         <height>144</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_10">
