--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1257</width>
-    <height>568</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -1409,118 +1409,7 @@
          <item>
           <widget class="QLabel" name="help">
            <property name="text">
-            <string>&lt;html&gt;
- &lt;head&gt;
-    &lt;style&gt;
-    th, td {
-        padding: 10px;
-        border: 1px solid #8f8f8f;
-      }
-    &lt;/style&gt;
-
- &lt;/head&gt;
-  &lt;body&gt;
-    &lt;h3
-      style=&quot;
-        margin-top: 30px;
-        margin-bottom: 20px;
-        margin-left: 30px;
-        margin-right: 30px;
-        -qt-block-indent: 0;
-        text-indent: 0px;
-      &quot;
-    &gt;
-      &lt;span style=&quot;font-size: large; font-weight: 600&quot;&gt;Mapflow&lt;/span&gt;
-    &lt;/h3&gt;
-    &lt;p align=&quot;center&quot;&gt;
-      &lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;
-        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
-          &gt;User Interface walkthrough&lt;/span
-        &gt;&lt;/a
-      &gt;
-    &lt;/p&gt;
-    &lt;p align=&quot;center&quot;&gt;
-      &lt;a
-        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#how-to-upload-your-image&quot;
-        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
-          &gt;How to process your own image&lt;/span
-        &gt;&lt;/a
-      &gt;
-    &lt;/p&gt;
-    &lt;p align=&quot;center&quot;&gt;
-      &lt;a
-        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;
-        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
-          &gt;How to use a different imagery tileset (XYZ or TMS)&lt;/span
-        &gt;&lt;/a
-      &gt;
-    &lt;/p&gt;
-    &lt;p align=&quot;center&quot;&gt;
-      &lt;a
-        href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;
-        &gt;&lt;span style=&quot;text-decoration: underline; color: #0057ae&quot;
-          &gt;How to connect to Maxar SecureWatch&lt;/span
-        &gt;&lt;/a
-      &gt;
-    &lt;/p&gt;
-    &lt;br&gt;
-    &lt;h3&gt;
-      &lt;span style=&quot;font-size: large; font-weight: 600;&quot;&gt;Mapflow Pricing&lt;/span&gt;
-    &lt;/h3&gt;
-
-    &lt;p align=&quot;center&quot;&gt;
-        &lt;table&gt;
-        &lt;colgroup&gt;
-        &lt;col style=&quot;width: 51%;&quot;&gt;
-        &lt;col style=&quot;width: 16%;&quot;&gt;
-        &lt;col style=&quot;width: 16%;&quot;&gt;
-        &lt;col style=&quot;width: 16%;&quot;&gt;
-        &lt;/colgroup&gt;
-        &lt;thead&gt;
-        &lt;tr class=&quot;row-odd&quot;&gt;&lt;th class=&quot;head&quot;&gt;&lt;p&gt;Tariff&lt;/p&gt;&lt;/th&gt;
-        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$50&lt;/p&gt;&lt;/th&gt;
-        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$90&lt;/p&gt;&lt;/th&gt;
-        &lt;th class=&quot;head&quot;&gt;&lt;p&gt;$800&lt;/p&gt;&lt;/th&gt;
-        &lt;/tr&gt;
-        &lt;/thead&gt;
-        &lt;tbody&gt;
-        &lt;tr class=&quot;row-even&quot;&gt;&lt;td&gt;&lt;p&gt;Default or user custom imagery, km²&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;50&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;100&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;1000&lt;/p&gt;&lt;/td&gt;
-        &lt;/tr&gt;
-        &lt;tr class=&quot;row-odd&quot;&gt;&lt;td&gt;&lt;p&gt;Premium satellite imagery, km²&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;10&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;20&lt;/p&gt;&lt;/td&gt;
-        &lt;td&gt;&lt;p&gt;200&lt;/p&gt;&lt;/td&gt;
-        &lt;/tr&gt;
-        &lt;/tbody&gt;
-        &lt;/table&gt;
-    &lt;/p&gt;
-
-
-    &lt;div&gt;
-        &lt;p&gt;See also – &lt;a class=&quot;reference internal&quot; href=&quot;https://docs.mapflow.ai/faq.html&quot;&gt;&lt;span class=&quot;doc&quot;&gt;*How to buy credits for using the platform? How much is it?*&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
-    &lt;/div&gt;
-    &lt;br&gt;
-
-    &lt;h3&gt;
-        &lt;span style=&quot;font-size: large; font-weight: 600;&quot;&gt;Join the project on Github&lt;/span&gt;
-    &lt;/h3&gt;
-    &lt;p&gt;
-      &lt;span style=&quot;font-weight: 600&quot;
-        &gt;If you have a feature request or spotted a bug,&lt;br /&gt;create an
-        issue on &lt;/span
-      &gt;&lt;a href=&quot;https://github.com/Geoalert/mapflow-qgis&quot;
-        &gt;&lt;span
-          style=&quot;font-weight: 600; text-decoration: underline; color: #0000ff&quot;
-          &gt;GitHub&lt;/span
-        &gt;&lt;/a
-      &gt;
-    &lt;/p&gt;
-  &lt;/body&gt;
-&lt;/html&gt;
-</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h3 style=&quot; margin-top:30px; margin-bottom:20px; margin-left:30px; margin-right:30px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:600;&quot;&gt;Mapflow&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;User Interface walkthrough&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#how-to-upload-your-image&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to process your own image&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to use a different imagery tileset (XYZ or TMS)&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect to Maxar SecureWatch&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;h3 style=&quot; margin-top:14px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:600;&quot;&gt;Mapflow Pricing&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;table border=&quot;0&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;&quot; align=&quot;center&quot; cellspacing=&quot;2&quot; cellpadding=&quot;0&quot;&gt;&lt;thead&gt;&lt;tr&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Billing plan&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;$50&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;$90&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;$800&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/thead&gt;&lt;tr&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;Default or user custom imagery, km²&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;50&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;100&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;1000&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;Premium satellite imagery, km²&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;10&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;20&lt;/p&gt;&lt;/td&gt;&lt;td style=&quot; padding-left:10; padding-right:10; padding-top:10; padding-bottom:10; border-top:1px; border-right:1px; border-bottom:1px; border-left:1px; border-top-color:#8f8f8f; border-right-color:#8f8f8f; border-bottom-color:#8f8f8f; border-left-color:#8f8f8f; border-top-style:solid; border-right-style:solid; border-bottom-style:solid; border-left-style:solid;&quot;&gt;&lt;p&gt;200&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;p&gt;See also – &lt;a href=&quot;https://docs.mapflow.ai/faq.html&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#094fd1;&quot;&gt;*How to buy credits for using the platform? How much is it?*&lt;/span&gt;&lt;/a&gt;&lt;br/&gt;&lt;/p&gt;&lt;h3 style=&quot; margin-top:14px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:600;&quot;&gt;Join the project on Github&lt;/span&gt;&lt;/h3&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;If you have a feature request or spotted a bug,&lt;br/&gt;create an issue on &lt;/span&gt;&lt;a href=&quot;https://github.com/Geoalert/mapflow-qgis&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline; color:#0000ff;&quot;&gt;GitHub&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignHCenter|Qt::AlignTop</set>
